tests/cases/should_fail/literals/multi_code_point_char_literal.stderr
error: invalid character literal `ab`, character literals may only contain one codepoint
 --> $DIR/multi_code_point_char_literal.hash:3:6
2 |   
3 |   k := 'ab';
  |        ^^^^ here
